@@ -1,3 +1,8 @@
+Thu Jul 28 11:14:59 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/userdb.py: tried to fix #311796 problem of profilename to
+	  URI conversion.
+
 2005-07-28  Mark McLoughlin  <markmc@redhat.com>
 
 	Fixes bug #311798
